--- a/B07Project/app/src/main/res/layout/activity_account_type.xml
+++ b/B07Project/app/src/main/res/layout/activity_account_type.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickCreateShopper"
-        android:text="Create Shopper Account"
+        android:text="Create Shopper Account :)"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.415"
