--- a/B07Project/app/src/main/res/layout/activity_shopper_view1.xml
+++ b/B07Project/app/src/main/res/layout/activity_shopper_view1.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ActivityShopperView1">
 
+    <TextView
+        android:id="@+id/textViewWelcomeTestShopper"
+        android:layout_width="235dp"
+        android:layout_height="39dp"
+        android:text=""
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.225" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
